Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
5.15.2
-
None
-
-
21
-
Team 1 Foundation_Sprint 43, Team 1 Foundation_Sprint 44
Description
in some cases, when i connected to a BLE device, QT crashed.
the crash happened in the function:
QLowEnergyControllerPrivateWinRTNew::connectToPairedDevice()
at line:
hr = QWinRTFunctions::await(op, result.GetAddressOf(), QWinRTFunctions::ProcessThreadEvents, 500);
or in the function setupLEDeviceWatcher() (when there are BLE device paired)
BT Device 4.2.
it is very often to happen.
Attachments
Issue Links
- is duplicated by
-
QTBUG-95862 Crash on Windows when erasing QLowEnergyController during activity
-
- Closed
-
For Gerrit Dashboard: QTBUG-96057 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
370939,1 | winrt: Protect from late AdvertismentReceived callback | dev | qt/qtconnectivity | Status: ABANDONED | 0 | 0 |
371087,1 | winrt: Protect from late AdvertisementReceived callback | 6.2 | qt/qtconnectivity | Status: ABANDONED | 0 | 0 |
371090,3 | winrt: Protect from late AdvertisementReceived callback | dev | qt/qtconnectivity | Status: MERGED | +2 | 0 |
371113,1 | winrt: Protect from late AdvertisementReceived callback | 6.2.0 | qt/qtconnectivity | Status: ABANDONED | 0 | 0 |
371445,2 | winrt: Protect from late AdvertisementReceived callback | 6.2 | qt/qtconnectivity | Status: MERGED | +2 | 0 |
371467,5 | winrt: Protect from late AdvertisementReceived callback | tqtc/lts-5.15 | qt/tqtc-qtconnectivity | Status: MERGED | +2 | 0 |
372601,3 | QWinRtFunctions::await() - introduce early exit condition | dev | qt/qtbase | Status: MERGED | +2 | 0 |
372603,1 | WIP: QLowEnergyControllerWinRT: handle disconnect while async operations | dev | qt/qtconnectivity | Status: ABANDONED | -2 | 0 |
372912,5 | QLowEnergyControllerWinRT: refactor connection to device | dev | qt/qtconnectivity | Status: MERGED | +2 | 0 |
374626,2 | QWinRtFunctions::await() - introduce early exit condition | 6.2 | qt/qtbase | Status: MERGED | +2 | 0 |
374667,3 | QWinRtFunctions::await() - introduce early exit condition | tqtc/lts-5.15 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |
375211,2 | QLowEnergyControllerWinRT: refactor connection to device | 6.2 | qt/qtconnectivity | Status: MERGED | +2 | 0 |
375214,5 | QLowEnergyControllerWinRT: refactor connection to device | tqtc/lts-5.15 | qt/tqtc-qtconnectivity | Status: MERGED | +2 | 0 |